--- a/Classwork/Activity-RF_Bagging.qmd
+++ b/Classwork/Activity-RF_Bagging.qmd
@@ -60,7 +60,6 @@ from sklearn.tree import DecisionTreeClassifier, plot_tree, RandomForestClassifi
 from sklearn.ensemble import BaggingClassifier
 ```
 
-
 # Setup
 
 ```{r, version = "R"}
@@ -131,7 +130,6 @@ plot_tree(tree)
 
 ```
 
-
 ## Bagging
 
 ```{r, version = "R"}
@@ -152,9 +150,12 @@ bf = BaggingClassifier(base_classifier = DecisionTreeClassifier())
 ## Random Forests
 
 ```{r, version = "R"}
-rf_spec <- random_forest() %>%
-  set_engine("ranger", times = 5) %>%
+rf_spec <- rand_forest(mtry = tune(), min_n = tune(), trees = 10) %>%
+  set_engine("ranger") %>%
   set_mode("classification")
+
+rf_grid <- grid_regular(mtry(c(?????)),#decide the smallest and largest values you are willing to consider for how many random parameters to choose
+                        ?????)  
 ```
 
 ```{python, version = "python"}
@@ -163,9 +164,10 @@ rf = RandomForestClassifier()
 
 ```
 
-
 # Your turn
 
 ## Find the best *bagged* model for the cannabis data
+
 ## Find the best *random forest* model for the cannabis data
+
 ## Report some metrics on your models
